# CFM-ccfm

./: .gitignore  pyproject.toml  readme.md
ccfm/: __init__.py  geom.py  mesh_helpers.py
tests/: test_geom.py
tests/data/: 3d_elev_fault.geojson  3d_horiz_fault.geojson  oly_pug_test_dem.tif  simple_test_faults.geojson
