[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccfm"
version = "0.1.0"
description = "Contour-based 3D fault meshing utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [{name="CRESCENT"}]
dependencies = ["numpy>=1.23", "shapely>=2.0", "scipy>=1.10"]
